--- a/src/aura/moviesList/moviesList.cmp
+++ b/src/aura/moviesList/moviesList.cmp
@@ -1,11 +1,18 @@
 <aura:component implements="flexipage:availableForAllPageTypes,force:hasRecordId" controller="MoviesListController" access="global">
     <aura:attribute name="columns" type="list"/>
     <aura:attribute name="movies" type="MBMS_Movie__c[]"/>
+    <aura:attribute name="moviesAvailable" type="Boolean"/>
     <aura:handler name='init' action="{!c.getMovies}" value="{!this}"/>
+    <aura:handler name='init' action="{!c.arePhotosAvailableFunction}" value="{!this}"/>
     <lightning:card title="Movies List">
-        <lightning:datatable keyField="id"
-                             data="{!v.movies}"
-                             columns="{!v.columns}"
-                             hideCheckboxColumn="true"/>
+        <aura:if isTrue="{!v.moviesAvailable}">
+            <lightning:datatable keyField="id"
+                                 data="{!v.movies}"
+                                 columns="{!v.columns}"
+                                 hideCheckboxColumn="true"/>
+            <aura:set attribute="else">
+                <p>There are no movie records available.</p>
+            </aura:set>
+        </aura:if> 
     </lightning:card>
 </aura:component>
