--- a/src/aura/batchLogsList/batchLogsList.cmp
+++ b/src/aura/batchLogsList/batchLogsList.cmp
@@ -4,7 +4,7 @@
     <aura:attribute name="batchLogsAvailable" type="Boolean"/>
     <aura:handler name='init' action="{!c.getBatchLogsFunction}" value="{!this}"/>
     <aura:handler name='init' action="{!c.areBatchLogsAvailableFunction}" value="{!this}"/>
-    <lightning:card title="Batch Logs">
+    <lightning:card title="Batch Logs" iconName="custom:custom67">
         <aura:if isTrue="{!v.batchLogsAvailable}">
             <lightning:datatable keyField="id"
                                  data="{!v.batchLogs}"
