--- a/src/aura/requiringActionRecordsList/requiringActionRecordsList.cmp
+++ b/src/aura/requiringActionRecordsList/requiringActionRecordsList.cmp
@@ -5,7 +5,7 @@
     <aura:handler name='init' action="{!c.getRequiringActionRecordsFunction}" value="{!this}"/>
     <aura:handler name='init' action="{!c.areRequiringActionRecordsAvailableFunction}" value="{!this}"/>
     <lightning:card title="Records That Require An Action" iconName="custom:custom11">
-        <aura:if isTrue="{!v.booksAvailable}">
+        <aura:if isTrue="{!v.requiringActionRecordsAvailable}">
             <lightning:datatable keyField="id"
                                  data="{!v.sObjects}"
                                  columns="{!v.columns}"
