--- a/src/aura/requiringActionRecordsList/requiringActionRecordsList.cmp
+++ b/src/aura/requiringActionRecordsList/requiringActionRecordsList.cmp
@@ -2,17 +2,21 @@
     <aura:attribute name="columns" type="list"/>
     <aura:attribute name="sObjects" type="sObject[]"/>
     <aura:attribute name="requiringActionRecordsAvailable" type="Boolean"/>
+    <aura:attribute name="userShouldBeAbleToSeeTheComponent" type="Boolean"/>
     <aura:handler name='init' action="{!c.getRequiringActionRecordsFunction}" value="{!this}"/>
     <aura:handler name='init' action="{!c.areRequiringActionRecordsAvailableFunction}" value="{!this}"/>
-    <lightning:card title="Records That Require An Action" iconName="custom:custom11">
-        <aura:if isTrue="{!v.requiringActionRecordsAvailable}">
-            <lightning:datatable keyField="id"
-                                 data="{!v.sObjects}"
-                                 columns="{!v.columns}"
-                                 hideCheckboxColumn="true"/>
-            <aura:set attribute="else">
-                <p>There are no requiring action records.</p>
-            </aura:set>
-        </aura:if>
-    </lightning:card>
+    <aura:handler name='init' action="{!c.shouldUserBeAbleToSeeTheComponentFunction}" value="{!this}"/>
+    <aura:if isTrue="{!v.userShouldBeAbleToSeeTheComponent}">
+        <lightning:card title="Records That Require An Action" iconName="custom:custom11">
+            <aura:if isTrue="{!v.requiringActionRecordsAvailable}">
+                <lightning:datatable keyField="id"
+                                     data="{!v.sObjects}"
+                                     columns="{!v.columns}"
+                                     hideCheckboxColumn="true"/>
+                <aura:set attribute="else">
+                    <p>There are no requiring action records.</p>
+                </aura:set>
+            </aura:if>
+        </lightning:card>
+    </aura:if>
 </aura:component>
