--- a/src/aura/requiringActionRecordsList/requiringActionRecordsList.cmp
+++ b/src/aura/requiringActionRecordsList/requiringActionRecordsList.cmp
@@ -9,10 +9,12 @@
     <aura:if isTrue="{!v.userShouldBeAbleToSeeTheComponent}">
         <lightning:card title="Records That Require An Action" iconName="custom:custom11">
             <aura:if isTrue="{!v.requiringActionRecordsAvailable}">
-                <lightning:datatable keyField="id"
-                                     data="{!v.sObjects}"
-                                     columns="{!v.columns}"
-                                     hideCheckboxColumn="true"/>
+                <div style="height: 350px">
+                    <lightning:datatable keyField="id"
+                                         data="{!v.sObjects}"
+                                         columns="{!v.columns}"
+                                         hideCheckboxColumn="true"/>
+                </div>
                 <aura:set attribute="else">
                     <p>There are no requiring action records.</p>
                 </aura:set>
